# nemesis-gnss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: nemesis_base.yaml  nemesis_nav.yaml  nemesis_shield.yaml
docs/: mkdocs.yml
nemesis/: __init__.py  detector.py
nemesis/cli/: __init__.py  main.py
nemesis/data/: __init__.py  dataset.py  loader.py  transforms.py
nemesis/eval/: __init__.py  metrics.py  report.py
nemesis/models/: __init__.py  encoder.py  probe.py  shield.py
nemesis/nav/: __init__.py  ekf.py
nemesis/train/: __init__.py  callbacks.py  losses.py  trainer.py
nemesis/viz/: __init__.py  pareto.py  roc.py  scalogram.py
notebooks/: 01_quickstart.ipynb
tests/: test_data.py  test_models.py  test_nav.py
